--- a/bbscheduler.tex
+++ b/bbscheduler.tex
@@ -459,7 +459,7 @@ In the running phase, Cerberus maximizes the predefined objectives of job schedu
 We evaluate our design through extensive event driven simulations. 
 Our preliminary results demonstrate that
 1) compared to non-burst-buffer systems, Cerberus accelerates the job execution, reduces the job response time and improves average system throughput by 192.50\%;
-2) 3-phase based Cerberus extra boosts the average system throughput by 62.31\% comparing to traditional static burst-buffer-aware batch scheduler.
+2) three-phase based Cerberus extra boosts the average system throughput by 62.31\% comparing to traditional static burst-buffer-aware batch scheduler.
 \end{abstract}
 
 % no keywords
