--- a/scheduler.tex
+++ b/scheduler.tex
@@ -28,7 +28,7 @@
 %The layered hierarchy in Figure~\ref{Fig:CerberusQueues} also indicates that burst buffer
 %can fill in the memory gap between the memory on compute nodes and the hard disk storage.
 
-As shown in Figure 1, Cerberus adopts a 3-phase job scheduling strategy. 
+As shown in Figure 1, Cerberus adopts a three-phase job scheduling strategy. 
 In order to help understand Cerberus design, we illustrate job state transition in Figure 2.
 \TODO{you two should check the paragraph to ensure this part is succinct and precise!--lan\&jin}
 To see how Cerberus schedules a particular job with three queues,
@@ -52,7 +52,7 @@ As indicated by Figure~\ref{Fig:JobFSM}, the resource release at anytime can tri
 to schedule jobs in multiple queues.
 
 The three-phase job model divides the jobs to generic phases with very specific resource demands.
-Cerberus conquers the scheduling problem in each phase, and the detailed decision making is described in Section 4.3 - 4.5.
+Cerberus conquers the scheduling problem in each phase, and the detailed decision making is described in Section~\ref{SubSec:OptStageIn}-\ref{SubSec:OptStageOut}.
 %The fine scheduling granularity enables the full utilization of burst buffer for different purposes.
 %The divide-conquer approach provides a framework that can be extended to various scheduling
 %policies for each individual phase.
@@ -82,6 +82,7 @@ We plan to investigate this interesting problem in the future.
 
 
 \subsection{Scheduling in the Stage-in Phase}
+\label{SubSec:OptStageIn}
 
 In the stage-in phase, jobs require only the burst buffer.
 Cerberus schedules the jobs in $Q_I$ based on their burst buffer demands $bb\_in$.
@@ -122,6 +123,7 @@ backtracking $\mathcal{J}_{Q_I}$ or $\mathcal{J}_{Q_O}$ in total take time propo
 
 
 \subsection{Scheduling in the Running Phase}
+\label{SubSec:OptRunning}
 Running jobs not only require the compute nodes for computation,
 but also utilize the burst buffer to enhance the I/O performance.
 Here we take a general strategy by defining the \textbf{profit} of $job_i$
@@ -170,12 +172,13 @@ Specializing Problem 2 using \equref{Equ:DefValue} in fact favors tasks that cla
 %\end{align*}
 
 
-Problem 2 can be informally treat as the 2-dimension 0-1 knapsack problem, which is also NP-hard.
+Problem 2 can be informally treat as the two-dimension 0-1 knapsack problem, which is also NP-hard.
 We use the same dynamic programming skill to solve Problem 2, the recursion is given by \equref{Equ:MaxProductRecursion}.
 The time complexity of solving \equref{Equ:MaxProductRecursion} and selecting $\mathcal{J}_{Q_R}$ with memorization technique is $O(n\times CN\times BB)$.
 
 
 \subsection{Scheduling in the Stage-out Phase}
+\label{SubSec:OptStageOut}
 
 The stage-out phase scheduling is designed based on the value of $bb\_out$ of the jobs in $Q_O$.
 The optimization formula for the stage-out phase is similar as in Problem 1, 
