--- a/simulation.tex
+++ b/simulation.tex
@@ -183,7 +183,7 @@ Since Trinity is not available to use at present,
 there is no Trinity job log available for our study.
 We use the job log collected from ANL's Blue Gene Intrepid system. The log contains 68,936 jobs
 submitted to the system from January to September 2009~\cite{Tang:IPDPS:2010}.
-We patched 3 fields to each job's log entry: the amount of input data $data\_in$,
+We patched three fields to each job's log entry: the amount of input data $data\_in$,
 the total amount of written data for checkpointings $data\_run$
 and the amount of output data $data\_out$.
 We assume $data\_run$ and $data\_out$ follows the uniform distribution with a
