--- a/simulation.tex
+++ b/simulation.tex
@@ -119,16 +119,6 @@ The allocated resources are released at the following time points:
 %$TS_{s\_x}$ stands for the timestamps of the starting phase $x$,
 %$BW_{x\_to\_y}$ stands for the bandwidth between $x$ and $y$.
 %BBSim does not simulate the data transfer between IO nodes and PFS through the network.
-The time spent for I/O in our simulation is calculated by an analytical model, which is 
-\begin{align}
-        & \text{Time}_{\text{I/O}} =\frac{\text{Data Amount}}{\text{Link Bandwidth}}\label{Equ:IOTime}
-\end{align}
-Though targeting on burst buffer enabled systems,
-BBSim also supports simulating job scheduling on HPC systems without burst buffer.
-Besides, it is easy to integrate other scheduling policies into BBsim.
-The codebase of BBsim and Cerberus are made public to the community\cite{bbsim-github}.
-
-
 
 % % system
 % We consider simulating the full Trinity super computer\cite{TrinitySystem}.
@@ -145,7 +135,7 @@ The codebase of BBsim and Cerberus are made public to the community\cite{bbsim-g
 % Bandwidth between CPU node and non-burst-buffer IO node is set to 2.5 GBps.
 
 
-BBsim simulates a burst-buffer-enabled HPC system, as shown in Figure~\ref{Fig:BBArchitecture}.
+BBSim simulates a burst-buffer-enabled HPC system, as shown in Figure~\ref{Fig:BBArchitecture}.
 This system architecture is inspired by Trinity~\cite{TrinitySystem}, 
 the next generation supercomputer in Los Alamos National Laboratory.
 The parameters used in our simulation are taken from the 
@@ -155,11 +145,18 @@ e.g., 9,436 Intel Haswell nodes and 9,500 Intel Xeon Phi nodes.
 There are 576 burst buffer nodes with an aggregated 3.7 PB storage, which are globally accessible as the intermediate storage.
 The sequential read/write speed of burst buffer nodes is 8.0 GBps.
 The bandwidth between a CPU node and an IO node is set to 2.5 GBps.
+\NOTE{The time spent for job's I/O operation in our simulation is simply calculated by
+dividing the amount of transferred data by the corresponding bandwidth.}
+
+Though targeting on burst buffer enabled systems,
+BBSim also supports simulating job scheduling on HPC systems without burst buffer.
+Besides, it is easy to integrate other scheduling policies into BBSim.
+The codebase of BBSim and Cerberus are made public to the community\cite{bbsim-github}.
 
 \begin{figure}[htp]
         \centering
         \includegraphics[width=3.5in]{BBArchitecturewithBandwidth}
-        \caption{Our simulated burst buffer enabled HPC system is inspired by Trinity at LANL. The bandwidth between compute nodes and burst buffer node is 8.0 GBps. The bandwidth between compute nodes and I/O nodes is 2.5 GBps.}
+        \caption{Our simulated burst buffer enabled HPC system is inspired by Trinity at LANL. The bandwidth between compute nodes and burst buffer node is 8.0 GBps. The bandwidth between compute nodes and I/O nodes is 2.5 GBps. The bandwidth between I/O layer and the outside InfiniteBand Network is also set to 2.5 GBps.}
         \label{Fig:BBArchitecture}
 \end{figure}
 
